# mp3_experiments

./: .gitignore  CMakeLists.txt  README.md
include/: id3_tag_handler.hpp  mp3_reader.hpp
src/: id3_tag_handler.cpp  main.cpp  mp3_reader.cpp
